# fcn-

./: CMakeLists.txt  grad_test.cpp  minist.cpp  minist_test.cpp  readme.md
include/: activator.hpp  layer.hpp  network.hpp
src/: activator.cpp  layer.cpp  network.cpp
test/: CMakeLists.txt  W_3_8.txt  W_8_3.txt  argv  argv.cpp  example  example.cpp  gdb_test  gdb_test.cpp  grad_test.cpp  test.cpp  test2  test2.cpp  test3  test3.cpp  test_log  test_log.cpp
test/logs/: basic.txt
